--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@ h4 {
     <h4 id="showFeedback"> </h4>
 
 
-    <img src="/Users/dimi_personal/Desktop/chetteraucher.png" alt="" id="imgChange">
+    <img src="" alt="" id="imgChange">
     <h1>andere titel</h1>
 </body>
 
@@ -162,18 +162,18 @@ function calculateResult () {
     if (resultat<=4) {
         showFeedback.innerText='chline schniebel'
         showFeedback.style.color='red';
-        imgChange.src='/Users/dimi_personal/Dropbox (Privat)/Agentur/Kunden/sandchaste/marco/tmi/angry.jpg'
+        imgChange.src='/angry.jpg'
     }
     else if (resultat>=5 && resultat<7){ 
         showFeedback.innerText='küssbare schniebel'
         showFeedback.style.color='yellow';
-        imgChange.src='/Users/dimi_personal/Dropbox (Privat)/Agentur/Kunden/sandchaste/marco/tmi/average.png'
+        imgChange.src='/average.png'
 
     }
     else {
         showFeedback.innerText='randy marsh schniebel'
         showFeedback.style.color='green';      
-        imgChange.src='/Users/dimi_personal/Dropbox (Privat)/Agentur/Kunden/sandchaste/marco/tmi/yes.png'
+        imgChange.src='/yes.png'
 
     }
 }
