--- a/index.html
+++ b/index.html
@@ -162,18 +162,18 @@ function calculateResult () {
     if (resultat<=4) {
         showFeedback.innerText='chline schniebel'
         showFeedback.style.color='red';
-        imgChange.src='/angry.jpg'
+        imgChange.src='angry.jpg'
     }
     else if (resultat>=5 && resultat<7){ 
         showFeedback.innerText='küssbare schniebel'
         showFeedback.style.color='yellow';
-        imgChange.src='/average.png'
+        imgChange.src='average.png'
 
     }
     else {
         showFeedback.innerText='randy marsh schniebel'
         showFeedback.style.color='green';      
-        imgChange.src='/yes.png'
+        imgChange.src='yes.png'
 
     }
 }
